Changelog
=========

1.0.12 (unreleased)
-------------------

- Nothing changed yet.


1.0.11 (2013-08-13)
-------------------

- Add CSS classes on tabular_view table headers and cells
  in order to easily customize them.
  [avoinea]

- Use 'structure value' for tabular_view field value in order to easily
  insert images, links or other HTML entities in this table
  [avoinea]


1.0.10 (2013-05-23)
-------------------

- Fix tabular view to show append /view onto files and images
  [vangheem]


1.0.9 (2013-04-06)
------------------

- Provide /RSS view for collection so we at least have an option
  for syndication before 4.3
  [vangheem]


1.0.8 (2013-03-05)
------------------

- fix album view if item does not have images
  [vangheem]


1.0.7 (2012-12-14)
------------------

- Check if item isPrincipiaFolderish instead of the hardcoded portal_type
  Folder when searching for images
  [ichimdav]

- Fix thumbnail_view so it works with any portal_atct image types not just
  with Image and News Items
  [ichimdav]

- properly show dates on tabular view, fixes #12907
  [maartenkling]


1.0.6 (2012-09-21)
------------------

- Avoid site error on thumbnail view if some scale generation have failed.
  [thomasdesvenain]

- Avoid site error on summary view if some scale generation have failed.
  [kroman0]

- Provide a synContentValues method for compatibility with syndication
  in Plone <= 4.2.
  [davisagli]

- Added a validator 'isInt' to field limit for the purpose avoid a exception
  [hersonrodrigues]

- Fix the limit of number of items to show in batch results
  see https://dev.plone.org/ticket/13129 [hersonrodrigues]

- Implement ISyndicatable for 4.3
  [vangheem]


1.0.5 (2012-08-27)
------------------

- Add an alias folder_summary_view pointing to summary_view. This allows
  existing installs to display results for news/aggregator and
  events/aggregator see http://dev.plone.org/ticket/13010 [ericof]
