@@ -4,7 +4,10 @@ Changelog
 1.0.12 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Add a ``custom_query`` parameter to the ``Collection`` class' ``results`` and
+  ``queryCatalog`` methods, which allows for run time customization of the
+  stored query, e.g. by request parameters.
+  [thet]
 
 
 1.0.11 (2013-08-13)
